feat: se crea metodo get para obtener todas las transacciones creadas
